v6.4.2
- revert some changes due to python/json problem with windows paths

v6.4.1
- fix crash when video files are present

v6.4.0
- add basic support for picture addons

v6.3.6
- add vignette option

v6.3.5
- added an option to display full image path

v6.3.4
- don't require shares to be writable

v6.3.3
- update for kodi 20

v6.3.2
- improve xbmcvfs file read handling

v6.3.1
- use official python libraries

v6.3.0
- use art table to retrieve fanart
- use json to read and write cache

v6.2.0
- convert skin to 1080p
- add support for more picture extensions

v6.1.0
- update exif, iptc and xmp data parsers
- fix: display background setting was not selectable
- fix: slideshow with no effect was broken

v6.0.2
- cleanup

v6.0.1
- bump

v6.0.0
- changes for python 3

v5.0.9
- fix splash image kept spinning in the background, eating up cpu

v5.0.8
- re-add option to disable animations

v5.0.4
- add option to disable animations

v5.0.3
- move repo to gitlab

v5.0.2
-cosmetics
- skin tweaks

v5.0.1
- add black background

v4.2.3
- don't crash when failing to retrieve skinpath

v4.2.2
- extra logging

v4.2.1
- cosmetics

v4.2.0
- add resume from last position option

v4.1.4
- better handling when picture folder is empty

v4.1.3
- use image instead of largeimage controls 

v4.1.2
- don't create empty cache file
- delete empty cache files

v4.1.1
- don't crash when advancedsettings.xml is corrupt

v4.1.0
- option to exclude dirs/files using pictureexcludes in advancedsettings.xml

v4.0.1
- fix cache creation when an empty cache file is present.

v4.0.0
- remove simplejson support

v3.0.3
- language update
- cosmetics

v3.0.2
- fix randomizing the list

v3.0.1
- fix index creation during update

v3.0.0
- bump for jarvis
- always use image index
- remove option to create an index

v2.1.9
- auto placement of exif info labels

v2.1.8
- fix background creation of image index

v2.1.7
- move music info to bottom

v2.1.6
- cosmetics

v2.1.5