@@ -1,5 +1,6 @@
 v6.4.2
 - revert some changes due to python/json problem with windows paths
+- make recursive slideshow optional
 
 v6.4.1
 - fix crash when video files are present
